# voice-flow

./: .gitignore  README.md  config.toml  pyproject.toml  setup.sh
src/voiceflow/: __init__.py  __main__.py  app.py  audio.py  config.py  log.py  pipeline.py  rewriter.py  system.py  transcriber.py
tests/: test_app.py  test_audio.py  test_config.py  test_log.py  test_pipeline.py  test_rewriter.py  test_system.py  test_transcriber.py
