[project]
name = "voiceflow"
version = "0.1.0"
description = "Local push-to-talk voice typing for macOS Apple Silicon"
requires-python = ">=3.13"
dependencies = [
    "mlx-whisper>=0.4.0",
    "mlx-lm>=0.20.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pynput>=1.7.0",
]

[project.scripts]
voiceflow = "voiceflow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceflow"]
